Erratic behaviour of materials/material slots for text objects #109491

Closed
opened 2023-06-29 10:57:00 +02:00 by Dan Silden · 2 comments

System Information
Operating system: Linux-5.19.0-45-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 980M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.108.03

Blender Version
Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb

Short description of error
Material assignment for text objects doesn't behave as expected. Removing an unused material slot will cause changes to the materials used by the object. The same happens if you rearrange the material slots.

Exact steps for others to reproduce the error

  1. Add a new text object. Leave the default string "Text".
  2. Add 3 new material slots with different materials to the object. Use different viewport display colors to be able to see changes.
    (You will now have Material.001, Material.002 and Material.003)
  3. In edit mode, select the last two letters and assign Material.002.
    (You should now have "Te" using Material.001 and "xt" using Material.002)
  4. In object mode, remove the last material slot containing Material.003.
    (This material was not assigned to any character, and removing it should not cause any change.)
  5. All 4 letters are now using Material.001. "xt" should still be using Material.002.

Alternatively, execute step 1-3 above and then.
4. Move the last material slot up to the first place.
(This should not cause any change. Normally in blender, the materials used by the geometry will not change if you rearrange the material slots.)
5. You will now have "Te" using Material.004 and "xt" using Material.002. "Te" should still be using Material.001.

I have attached a blend file where you just need to remove the last (unused) material slot to see the problem, or move the last material slot up to first position.

**System Information** Operating system: Linux-5.19.0-45-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 980M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.108.03 **Blender Version** Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` **Short description of error** Material assignment for text objects doesn't behave as expected. Removing an unused material slot will cause changes to the materials used by the object. The same happens if you rearrange the material slots. **Exact steps for others to reproduce the error** 1. Add a new text object. Leave the default string "Text". 2. Add 3 new material slots with different materials to the object. Use different viewport display colors to be able to see changes. (You will now have Material.001, Material.002 and Material.003) 3. In edit mode, select the last two letters and assign Material.002. (You should now have "Te" using Material.001 and "xt" using Material.002) 4. In object mode, remove the last material slot containing Material.003. (This material was not assigned to any character, and removing it should not cause any change.) 5. All 4 letters are now using Material.001. "xt" should still be using Material.002. Alternatively, execute step 1-3 above and then. 4. Move the last material slot up to the first place. (This should not cause any change. Normally in blender, the materials used by the geometry will not change if you rearrange the material slots.) 5. You will now have "Te" using Material.004 and "xt" using Material.002. "Te" should still be using Material.001. I have attached a blend file where you just need to remove the last (unused) material slot to see the problem, or move the last material slot up to first position.
Dan Silden added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-06-29 10:57:01 +02:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
Module
Modeling
and removed
Status
Needs Triage
labels 2023-06-29 11:14:22 +02:00
Philipp Oeser self-assigned this 2023-06-29 11:14:31 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-28 11:47:05 +02:00
Member

OK, so this should be fixed in 4.0 now.
Will look into backporting to LTS (will have to discuss how we handle this).

OK, so this should be fixed in 4.0 now. Will look into backporting to LTS (will have to discuss how we handle this).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109491
No description provided.